TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA. 
Rumble
The Builder Academy
builderacademy.net 9091
 
tbaMUD 3.55
[Dec 29 2007] - Rumble
  Fixed top_of_helpt bug being off by one. (thanks Jamdog)
  Fixed trigedit copy bug where it used real_room and not real_trigger. (thanks Jamdog)
[Dec 21 2007] - Rumble
  Fixed dg_affect crash caused by a typo on my part.
  Renamed shit again! No really in zmalloc.c unsigned char * shit.
[Dec 15 2007] - Rumble
  Showvnums shows [T#] for a single attached trig or [TRIGS] for multiple attached trigs (except for rooms since there is plenty of room to list all attached trigs).
  Fixed bug where showvnums would not show if attached. (thanks Sryth)
tbaMUD 3.54
[Nov 12 2007] - Rumble
  Updated users command to fix GET_INVIS_LEV bug.
  Updated the drink command to work in rooms where the sector type should logically allow it.
[Nov 04 2007] - Rumble
Increased the size of a mail message from 4k to 8k.
  Updated remove_player so that the players command would not show phantom users when someone self-deletes.
  Updated sedit_rooms_menu to prevent a crash bug when trying to display a shop with rooms that have been removed.
[Nov 01 2007] - Rumble
  Updated mag_objectmagic bug where action description was not being used correctly on scrolls.
  Increased the size of MAX_RAW_INPUT_LENGTH and PLR_DESC_LENGTH.
[Oct 19 2007] - Rumble
  Fixed a few more 128 bit MOB_FLAGGED bugs.
[Oct 17 2007] - Rumble
  Fixed loading of non-128 bit prefs in load_char. (thanks Ziz)
[Oct 15 2007] - Rumble
  Removed some prototypes leftover from the old history command. (thanks Rhade)
[Oct 13 2007] - Rumble
  Updated World, Help, News, Socials, and src for tbaMUD3.54rc.
  Fixed bug where toggling syslog enabled brief. (thanks Rhade)
  Added zone 11.
[Oct 10 2007] - Rumble
  Added OLC menu options for Copying. The Xcopy option is still available for GODs and above.