@@ -4,11 +4,9 @@
 
                                  Implementors
                                  ~~~~~~~~~~~~
-                                Detta   Rumble   
 
                                  Greater Gods
                                  ~~~~~~~~~~~~
-                                   Zizazat   
 
                                      Gods
                                      ~~~~
