@@ -33,7 +33,6 @@ extern const char *drinks[];
 extern const char *drinknames[];
 extern const char *color_liquid[];
 extern const char *fullness[];
-extern const char *npc_class_types[];
 extern const char *weekdays[];
 extern const char *month_name[];
 extern const struct str_app_type str_app[];
